# poc_glpi

./: README.md  db_create.py  requirements.txt  run.py  server.py  setup.cfg  setup.py
glpi/: __init__.py  config.py  server.py
glpi/database/: glpi_computers.py  glpi_operatingsystems.py
glpi/objects/: computers.py  operatingsystems.py
objects/: computers.py
scripts/: dummy.py
