[metadata]
name = glpi-ng
author = GLPI Team
author-email = glpi-dev@gna.org
summary = Gestion Libre de Parc Informatique
description-file = README.md
license = GNU-Affero-GPL-3
keywords =
   assets management
   restfull

[files]
packages =
    glpi
[entry]
scripts =
    dummy = scripts.dummy:main
